--- a/blogproject/templates/blog/contact.html
+++ b/blogproject/templates/blog/contact.html
@@ -3,13 +3,13 @@
 {% block main %}
 
 
-<p>QQ: 1974410167</p>
+<h4>QQ: 1974410167</h4>
 <br>
-<p>Email: hyuan_1@qq.com</p>
+<h4>Email: hyuan_1@qq.com</h4>
 <br>
-<p>ZhiHu: HYuan</p>
+<h4>知乎:<a href="https://www.zhihu.com/people/ruo-ke-53-42">HYuan</a></h4>
 <br>
-<p>GitHub: https://github.com/1974410167</p>
+<h4><a href="https://github.com/1974410167">GitHub: https://github.com/1974410167</a></h4>
 
 
 
